Jira-ID: CRNT-30445 The cardinality selection dropdown was too long. Fixed this.
git-svn-id: https://svn.csa.sungard.com/repos/ipp2/product/trunk/stardust/ui.web@67187 8100b5e0-4d52-466c-ae9c-bdeccbdeaf6b

--- a/web-modeler/src/main/resources/META-INF/xhtml/css/lightdust.css
+++ b/web-modeler/src/main/resources/META-INF/xhtml/css/lightdust.css
@@ -43,6 +43,7 @@ select {
 	font-size: 11px;
 	min-width: 100px;
 	height: 21px;
+	width: auto;
 	color: #4d4d4d;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
